
-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.2.9-2. (2019-01-11) -
-------------------------------------------------------

BUG FIXING
  o Generalized ULI index is now correctly displayed in traditional
    item analysis table in reports.
  o Item names are now correctly displayed in reports.
  o Item names are now correctly displayed in DDF section.

MINOR UPDATES
  o Legend of DDplot was modified.

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.2.9-1. (2018-12-10) -
-------------------------------------------------------

MINOR UPDATES
  o Wording in PDF/HTML reports was edited.

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.2.9. (2018-12-06) -
-------------------------------------------------------

BUG FIXING
  o IRT/Training/Dichotomous models - plots are correctly plotted.
  o Download buttons in IRT/4PL works now.

MAJOR UPDATES
  o TIF were converted into plotly.
  o Section Validity/FA is not accessible for now.

MINOR UPDATES
  o Selected R code for IRT/Bock's model was updated.
  o Wording in IRT models was updated.
  o Wording in Reports was updated.
  o Legend for plots of IRT models was modified in Reports.
  o Ability estimates summary table is now round in Reports.
  o Some typos were fixed in Reports.
  o Colours of IRT summary plots correspond to model for Items.


-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.2.8-7. (2018-12-05) -
-------------------------------------------------------

MAJOR UPDATES
  o IRT section of shiny app was updated and now provides
    new and more shiny figures in plotly
  o PDF and HTML reports were updated and now allow
    - different types of correlation in corrplots
    - different types of discrimination indices in DDplots
    - summary table for ability estimates in IRT section

-------------------------------------------------------